# reasoning-agents-framework

./: .env.example  .gitignore  Build_your_own_reasoning_model.md  README.md  pyproject.toml  run.sh
agents/: __init__.py
agents/manager/: __init__.py  manager_agent.py
agents/workers/: __init__.py  worker_agent_1.py  worker_agent_2.py
config/: registry.yaml
core/: __init__.py  base_agent.py  base_tool.py  config.py  logging_utils.py
data/: compliance_rules.json  contracts.csv
docs/: ADDING_AGENTS.md  ADDING_TOOLS.md  ARCHITECTURE.md
prompts/: manager_agent.txt  worker_agent_1.txt  worker_agent_2.txt
scripts/: health_check.sh  stop_all.sh
tools/: __init__.py  tool_1.py  tool_2.py
